--- a/stacks/NetWeaver-DB2-Standard/playbook.yml
+++ b/stacks/NetWeaver-DB2-Standard/playbook.yml
@@ -25,14 +25,14 @@
         disk_type_boot: '{{ sap_nw_disk_type_boot | default("pd-ssd") }}'
         disk_size_swap: '{{ sap_nw_disk_size_swap | default(64) }}'
         disk_type_swap: '{{ sap_nw_disk_type_swap | default("pd-ssd") }}'
-        # disk_size_db2: '{{ sap_nw_disk_size_db2 | default(50) }}'
         disk_size_sapmnt: '{{ sap_nw_disk_size_sapmnt | default(10) }}'
         disk_type_sapmnt: '{{ sap_nw_disk_type_sapmnt | default("pd-ssd") }}'
         disk_size_usrsap: '{{ sap_nw_disk_size_usrsap | default(10) }}'
         disk_type_usrsap: '{{ sap_nw_disk_type_usrsap | default("pd-ssd") }}'
-        # disk_type_db2: '{{ sap_nw_disk_type_db2 | default("pd-ssd") }}'
         db2_sid_disk_size: '{{ sap_db2_sid_disk_size | default(4) }}'
         db2_sid_disk_type: '{{ sap_db2_sid_disk_type | default("pd-ssd") }}'
+        db2_db2sid_disk_size: '{{ sap_db2_db2sid_disk_size | default(15) }}'
+        db2_db2sid_disk_type: '{{ sap_db2_db2sid_disk_type | default("pd-ssd") }}'
         db2_log_archive_disk_size: '{{ sap_db2_log_archive_disk_size | default(150) }}'
         db2_log_archive_disk_type: '{{ sap_db2_log_archive_disk_type | default("pd-ssd") }}'
         db2_dump_disk_size: '{{ sap_db2_dump_disk_size | default(4) }}'
@@ -41,6 +41,8 @@
         db2_log_dir_disk_type: '{{ sap_db2_log_dir_disk_type | default("pd-ssd") }}'
         db2_sapdata_disk_size: '{{ sap_db2_sapdata_disk_size | default(25) }}'
         db2_sapdata_disk_type: '{{ sap_db2_sapdata_disk_type | default("pd-ssd") }}'
+        db2_saptmp_disk_size: '{{ sap_db2_saptmp_disk_size | default(50) }}'
+        db2_saptmp_disk_type: '{{ sap_db2_saptmp_disk_type | default("pd-ssd") }}'
         
         instance_name: '{{ sap_nw_instance_name }}'
         instance_type: '{{ sap_nw_instance_type | default("e2-standard-8") }}'
