--- a/stacks/NetWeaver-DB2-Standard/playbook.yml
+++ b/stacks/NetWeaver-DB2-Standard/playbook.yml
@@ -25,8 +25,10 @@
         disk_type_boot: '{{ sap_nw_disk_type_boot | default("pd-ssd") }}'
         disk_size_swap: '{{ sap_nw_disk_size_swap | default(64) }}'
         disk_type_swap: '{{ sap_nw_disk_type_swap | default("pd-ssd") }}'
-        disk_size_sapmnt: '{{ sap_nw_disk_size_sapmnt | default(10) }}'
+        disk_size_sapmnt: '{{ sap_nw_disk_size_sapmnt | default(25) }}'
         disk_type_sapmnt: '{{ sap_nw_disk_type_sapmnt | default("pd-ssd") }}'
+        disk_size_sapmnt_sid: '{{ sap_nw_disk_size_sapmnt_sid | default(10) }}'
+        disk_type_sapmnt_sid: '{{ sap_nw_disk_type_sapmnt_sid | default("pd-ssd") }}'
         disk_size_usrsap: '{{ sap_nw_disk_size_usrsap | default(10) }}'
         disk_type_usrsap: '{{ sap_nw_disk_type_usrsap | default("pd-ssd") }}'
         db2_sid_disk_size: '{{ sap_db2_sid_disk_size | default(4) }}'
@@ -46,7 +48,9 @@
         
         instance_name: '{{ sap_nw_instance_name }}'
         instance_type: '{{ sap_nw_instance_type | default("e2-standard-8") }}'
-        network_tags: '{{ sap_nw_network_tags | default([sap_network_tag | default("sap-allow-all")]) }}'
+        hostname: '{{ sap_nw_hostname }} | default("")'
+        deletion_protection: '{{ sap_nw_instance_deletion_protection | default(false)}}'
+        network_tags: '{{ sap_nw_network_tags }}'
         project_id: '{{ sap_project_id }}'
         service_account_email: '{{ sap_nw_service_account_email | default("{}@{}.iam.gserviceaccount.com".format(sap_nw_service_account_name | default("sap-common-sa"), sap_project_id)) }}'
         source_image: '{{ sap_source_image | default("") }}'
