Adding DBexport disk to the scripts

--- a/ansible/roles/nw-db2-standard/defaults/main.yml
+++ b/ansible/roles/nw-db2-standard/defaults/main.yml
@@ -37,7 +37,7 @@ sap_nw_ascs_instance_number: '01'
 sap_nw_pas_instance_number: '00'
 sap_nw_ascs_virtual_host: '{{ ansible_hostname }}'
 sap_nw_pas_virtual_host: '{{ ansible_hostname }}'
-sap_nw_install_files_dest: /sapmnt/Software
+sap_nw_install_files_dest: /DBexport/Software
 sap_nw_kernel_files: '{{ sap_nw_install_files_dest }}/Kernel_Files'
 sap_nw_rdbms_files: '{{ sap_nw_install_files_dest }}/RDBMS'
 
@@ -63,9 +63,9 @@ sap_swap_mountpoint: /SWAP
 # sap_usrsap_partition_name: saplv1
 sap_usrsap_mountpoint: /usr/sap/{{ sap_db2_sid }}
 # sap_sapmnt_partition_name: saplv2
-sap_sapmnt_sid_mountpoint: /sapmnt/{{ sap_db2_sid }}
-sap_sapmnt_partition_name: sapmnt
-sap_sapmnt_mountpoint: /sapmnt
+sap_sapmnt_mountpoint: /sapmnt/{{ sap_db2_sid }}
+sap_dbexport_partition_name: DBexport
+sap_dbexport_mountpoint: /DBexport
 sap_vg_name: sapvg
 
 sap_nw_disks:
@@ -75,8 +75,8 @@ sap_nw_disks:
   partition_path: "{{ sap_vg_name }}"
 - name: saplv2
   partition_path: "{{ sap_vg_name }}"
-- name: sapmnt
-  partition_path: "{{ sap_sapmnt_partition_name }}"
+- name: DBexport
+  partition_path: "{{ sap_dbexport_partition_name }}"
 - name: db2
   partition_path: "{{ sap_db2_sid_partition_name }}"
 - name: db2sid
@@ -99,19 +99,19 @@ sap_nw_logvols:
     mountpoint: "{{ sap_swap_mountpoint }}"
     fstype: swap
   saplv1:
-    size: 50%VG
+    size: 100%VG
     vol: "{{ sap_vg_name }}"
     mountpoint: "{{ sap_usrsap_mountpoint }}"
     fstype: xfs
   saplv2:
-    size: 50%VG
-    vol: "{{ sap_vg_name }}"
-    mountpoint: "{{ sap_sapmnt_sid_mountpoint }}"
-    fstype: xfs
-  sapmnt:
     size: 100%VG
-    vol: "{{ sap_sapmnt_partition_name }}"
+    vol: "{{ sap_vg_name }}"
     mountpoint: "{{ sap_sapmnt_mountpoint }}"
+    fstype: xfs
+  DBexport:
+    size: 100%VG
+    vol: "{{ sap_dbexport_partition_name }}"
+    mountpoint: "{{ sap_dbexport_mountpoint }}"
     fstype: xfs
   db2:
     size: 100%VG
