--- a/stacks/NetWeaver-DB2-Standard/playbook.yml
+++ b/stacks/NetWeaver-DB2-Standard/playbook.yml
@@ -27,10 +27,10 @@
         disk_type_swap: '{{ sap_nw_disk_type_swap | default("pd-ssd") }}'
         disk_size_sapmnt: '{{ sap_nw_disk_size_sapmnt | default(25) }}'
         disk_type_sapmnt: '{{ sap_nw_disk_type_sapmnt | default("pd-ssd") }}'
-        disk_size_sapmnt_sid: '{{ sap_nw_disk_size_sapmnt_sid | default(10) }}'
-        disk_type_sapmnt_sid: '{{ sap_nw_disk_type_sapmnt_sid | default("pd-ssd") }}'
         disk_size_usrsap: '{{ sap_nw_disk_size_usrsap | default(10) }}'
         disk_type_usrsap: '{{ sap_nw_disk_type_usrsap | default("pd-ssd") }}'
+        disk_size_dbexport: '{{ sap_dbexport_disk_size | default(10)}}'
+        disk_type_dbexport: '{{ sap_dbexport_disk_type| default("pd-ssd") }}'
         db2_sid_disk_size: '{{ sap_db2_sid_disk_size | default(4) }}'
         db2_sid_disk_type: '{{ sap_db2_sid_disk_type | default("pd-ssd") }}'
         db2_db2sid_disk_size: '{{ sap_db2_db2sid_disk_size | default(15) }}'
