--- a/stacks/NetWeaver-DB2-Standard/vars/deploy-vars.yml
+++ b/stacks/NetWeaver-DB2-Standard/vars/deploy-vars.yml
@@ -56,10 +56,6 @@ sap_nw_disk_type_usrsap:
 sap_nw_disk_size_sapmnt: 
 sap_nw_disk_type_sapmnt: 
 
-# sapmnt/<SID> Disk Size and Type
-sap_nw_disk_size_sapmnt_sid: 
-sap_nw_disk_type_sapmnt: 
-
 # /db2/<DBSID> Size and Type
 sap_db2_sid_disk_size: 
 sap_db2_sid_disk_type: 
@@ -87,6 +83,10 @@ sap_db2_sapdata_disk_type:
 # /db2/<DBSID>/saptmp/saptmp1 Size and Type
 sap_db2_saptmp_disk_size: 
 sap_db2_saptmp_disk_type: 
+
+# /DBexport Size and Type
+sap_dbexport_disk_size: 
+sap_dbexport_disk_type: 
 
 # Network Tags
 sap_nw_network_tags: 
