--- a/stacks/NetWeaver-DB2-Standard/playbook.yml
+++ b/stacks/NetWeaver-DB2-Standard/playbook.yml
@@ -30,7 +30,7 @@
         disk_size_usrsap: '{{ sap_nw_disk_size_usrsap | default(10) }}'
         disk_type_usrsap: '{{ sap_nw_disk_type_usrsap | default("pd-ssd") }}'
         disk_size_dbexport: '{{ sap_dbexport_disk_size | default(10)}}'
-        disk_type_dbexport: '{{ sap_dbexport_disk_type| default("pd-ssd") }}'
+        disk_type_dbexport: '{{ sap_dbexport_disk_type | default("pd-ssd") }}'
         db2_sid_disk_size: '{{ sap_db2_sid_disk_size | default(4) }}'
         db2_sid_disk_type: '{{ sap_db2_sid_disk_type | default("pd-ssd") }}'
         db2_db2sid_disk_size: '{{ sap_db2_db2sid_disk_size | default(15) }}'
@@ -48,8 +48,8 @@
         
         instance_name: '{{ sap_nw_instance_name }}'
         instance_type: '{{ sap_nw_instance_type | default("e2-standard-8") }}'
-        hostname: '{{ sap_nw_hostname }} | default("")'
-        deletion_protection: '{{ sap_nw_instance_deletion_protection | default(false)}}'
+        hostname: '{{ sap_nw_hostname | default("") }}'
+        deletion_protection: '{{ sap_nw_instance_deletion_protection | default(false) }}'
         network_tags: '{{ sap_nw_network_tags }}'
         project_id: '{{ sap_project_id }}'
         service_account_email: '{{ sap_nw_service_account_email | default("{}@{}.iam.gserviceaccount.com".format(sap_nw_service_account_name | default("sap-common-sa"), sap_project_id)) }}'
