--- a/ansible/roles/base/tasks/os.yml
+++ b/ansible/roles/base/tasks/os.yml
@@ -24,6 +24,17 @@
   - ansible_os_family == 'Suse'
   - wait_for_guest_register | bool
 
+- name: Check SUSE registration status
+  ansible.builtin.command: SUSEConnect --status
+  register: suse_status
+  changed_when: false
+  failed_when: false
+
+- name: Force new registration if not already registered
+  ansible.builtin.command: /usr/sbin/registercloudguest --force-new
+  when: suse_status.rc != 0 or 'Not Registered' in suse_status.stdout
+  changed_when: true
+
 - name: Install packages
   package:
     name: "{{ package_list }}"
