--- a/stacks/NetWeaver-DB2-Standard/playbook.yml
+++ b/stacks/NetWeaver-DB2-Standard/playbook.yml
@@ -61,6 +61,13 @@
         zone: '{{ sap_zone | default("us-central1-a") }}'
   tags: [assertions]
 
+- name: Fetch secrets and set fact on sap group
+  hosts: 127.0.0.1   
+  connection: local
+  gather_facts: no   
+  roles:
+    - role: google-secrets-manager
+
 - hosts: nw
   become: yes
   vars:
